--- a/src/css/home/main.css
+++ b/src/css/home/main.css
@@ -1,6 +1,6 @@
 .home {
-  height: 870px;
-  background-image: url("../../img/background.svg");
+  height: 900px;
+  background-image: url("../../img/bg-tlou.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   position: top right;
@@ -11,6 +11,25 @@ main {
   flex-direction: column;
   justify-content: space-between;
   gap: 15px;
+}
+
+.title-main {
+  display: flex;
+  align-items: center;
+}
+main h1 > span {
+  position: relative;
+}
+
+main h1 > span::after {
+  content: "";
+  display: block;
+  height: 100%;
+  width: 8px;
+  background-color: var(--color-grey-2);
+  position: absolute;
+  right: -32px;
+  top: 0;
 }
 
 main > p {
@@ -52,6 +71,7 @@ div > button {
 main > section {
   margin-top: 100px;
   align-items: start;
+  margin-bottom: 60px;
 }
 
 main > section h3 {
@@ -63,6 +83,7 @@ main > section h3 {
   margin-right: auto;
   width: 840px;
   gap: 20px;
+  overflow: auto;
 }
 
 .inside > li {
@@ -88,11 +109,10 @@ main > section h3 {
 
 @media (max-width: 768px) {
   .home {
-    background-position: left;
+    height: fit-content;
   }
   main {
     align-items: center;
-    margin-bottom: 120px;
   }
 
   main > section {
@@ -100,19 +120,14 @@ main > section h3 {
     margin-top: 50px;
   }
   .inside {
-    margin-bottom: 120px;
     overflow-x: auto;
   }
   main > p {
-    text-align: center;
     margin-bottom: 20px;
   }
 }
 
 @media (max-width: 550px) {
-  .home {
-    height: fit-content;
-  }
   main {
     margin-bottom: 0;
   }
@@ -122,8 +137,5 @@ main > section h3 {
   }
   main button {
     min-width: max-content;
-  }
-  .inside {
-    margin-bottom: 60px;
   }
 }
