--- a/src/css/global.css
+++ b/src/css/global.css
@@ -6,6 +6,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body {
+  overflow-x: hidden;
+}
 li {
   list-style: none;
 }
@@ -14,5 +17,3 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
-
