--- a/src/css/home/episodes.css
+++ b/src/css/home/episodes.css
@@ -1,103 +1,64 @@
 .episodes {
-  height: 900px;
+  height: fit-content;
   background-image: url("../../img/backgroundEpisodes.png");
   background-repeat: no-repeat;
   background-size: cover;
   position: top right;
 }
+
 .ep-text {
   gap: 28px;
-  height: 546px;
-  width: 479px;
-  margin-top: 80px;
-  padding: 5px;
+  max-height: 80%;
+  height: fit-content;
+  margin-top: 200px;
+  margin-bottom: 40px;
   text-align: left;
 }
 .ep-list {
-  margin: 0 auto;
-  height: 762px;
-  width: fit-content;
-  overflow: hidden;
-  overflow-y: auto;
+  height: max-content;
+  width: 100%;
+  align-items: center;
+  overflow-x: auto;
+  margin: auto;
+  margin-bottom: 60px;
+  gap: 20px;
 }
 .ep-card {
-  height: 182px;
-  width: 650px;
   display: flex;
+  flex-direction: column;
+  height: max-content;
+  min-height: 320px;
   align-items: center;
-  margin: 10px auto;
-  background-color: var(--color-grey-3);
-}
-.ep-card > div {
-  width: 60%;
-  height: 80%;
-  margin: 0 20px;
 }
 .ep-card img {
   width: 250px;
   height: 120px;
   border-radius: 12px;
-  margin: 20px 0 20px 22px;
+  margin: 20px;
+}
+.ep-card > div {
+  width: 100%;
+  height: fit-content;
 }
 .ep-card h4 {
   height: 30px;
   text-align: left;
+  margin-left: 25px;
+  margin-top: 5px;
 }
 .ep-card p {
   height: 88px;
-  width: 40ch;
+  max-width: 40ch;
   text-align: left;
-}
-@media (max-width: 1279px) {
-  .ep-list {
-    overflow: auto;
-  }
+  margin-left: 25px;
 }
 @media (max-width: 1050px) {
-  .ep-text {
-    margin-top: 200px;
-  }
-  .ep-list {
-    height: 671px;
-    margin: 80px auto 40px;
-  }
-  .ep-card {
-    flex-direction: column;
-    justify-content: center;
-    height: fit-content;
-    width: fit-content;
-    margin: 0 auto;
-  }
-  .ep-card img {
-    margin: 20px auto;
-  }
-  .ep-card > div {
-    align-items: left;
-    margin: 0;
-    width: max-content;
-  }
-}
-@media (max-width: 768px) {
-  .ep-content {
-    flex-direction: column;
-  }
-  .ep-list {
-    width: 100%;
-    gap: 10px;
-  }
-}
-@media (max-width: 500px) {
   .episodes {
     background-image: none;
-    background: linear-gradient(180deg, #950202 0, #000000 20%);
-    height: 1000px;
+    background: linear-gradient(180deg, #000000 0, #950202 40%, #000000 90%);
+    height: fit-content;
   }
-  .ep-text {
-    margin-top: 120px;
-    width: fit-content;
-    position: relative;
-    margin-bottom: 40px;
-  }
+
   .ep-text::before {
     content: "EPISODES";
     display: block;
@@ -105,10 +66,35 @@
     font: 400 5rem/1.03 var(--font-3);
     color: var(--color-grey-2);
     top: -100px;
-    left: -10px;
     position: absolute;
   }
+  .ep-text {
+    margin-top: 120px;
+    position: relative;
+  }
   .ep-list {
-    grid-template-columns: 1fr;
+    display: flex;
+    max-height: 600px;
+    min-height: 370px;
+    width: 90%;
+    justify-content: space-between;
+  }
+
+  .ep-card > div {
+    margin: 0;
+    width: max-content;
+  }
+  .ep-card p {
+    height: 100px;
+    max-width: 35ch;
+  }
+}
+@media (max-width: 768px) {
+  .ep-text {
+    margin-top: 160px;
+  }
+
+  .ep-list {
+    margin-top: 30px;
   }
 }
