--- a/src/css/utilities/scroll.css
+++ b/src/css/utilities/scroll.css
@@ -13,7 +13,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: var(--color-secondary);
+  background-color: #8e0000;
   border-radius: 20px;
   border: 3px solid #070d12;
 }
