--- a/src/css/home/episodes.css
+++ b/src/css/home/episodes.css
@@ -14,13 +14,13 @@
   text-align: left;
 }
 .ep-list {
-  height: max-content;
-  width: 100%;
-  align-items: center;
+  display: flex;
+  padding: 0 20px 20px 20px;
+  max-width: 1060px;
+  gap: 40px;
+  margin-left: auto;
+  margin-right: auto;
   overflow-x: auto;
-  margin: auto;
-  margin-bottom: 60px;
-  gap: 10px;
 }
 .ep-card {
   display: flex;
@@ -29,12 +29,7 @@
   min-height: 320px;
   align-items: start;
 }
-.ep-card:first-child {
-  margin-left: 0;
-}
-.ep-card:last-child {
-  margin-right: 0;
-}
+
 .ep-card img {
   width: 250px;
   height: 120px;
@@ -101,5 +96,12 @@
 
   .ep-list {
     margin-top: 30px;
+    gap: 15px;
+  }
+}
+
+@media (max-width: 410px) {
+  .ep-text::before {
+    font: 400 4.75rem/1.03 var(--font-3);
   }
 }
