--- a/src/css/home/episodes.css
+++ b/src/css/home/episodes.css
@@ -16,7 +16,8 @@
 .ep-list {
   display: flex;
   padding: 0 20px 20px 20px;
-  max-width: 1060px;
+  max-width: 1100px;
+  width: 100%;
   gap: 40px;
   margin-left: auto;
   margin-right: auto;
@@ -76,7 +77,7 @@
     display: flex;
     max-height: 600px;
     min-height: 370px;
-    width: 95%;
+    /* width: 95%; */
     justify-content: space-between;
   }
 
