--- a/src/css/home/main.css
+++ b/src/css/home/main.css
@@ -1,9 +1,9 @@
 .home {
   height: 900px;
-  background-image: url("../../img/bg-tlou.jpg");
+  background-image: url("../../img/bg-tlou.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  position: top right;
+  position: top left;
 }
 
 main {
@@ -82,9 +82,10 @@ main > section h3 {
   max-width: 100%;
   min-width: 300px;
   margin-right: auto;
+  /* margin-left: auto; */
   width: 840px;
   gap: 20px;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 .inside > li {
