--- a/src/css/utilities/utilities.css
+++ b/src/css/utilities/utilities.css
@@ -1,10 +1,11 @@
 .container {
   margin: 0 auto;
-  width: 78vw;
+  max-width: 1100px;
+  padding: 0 20px;
   height: 100%;
 }
 .flex,
-.flex-none{
+.flex-none {
   display: flex;
   justify-content: space-between;
 }
@@ -15,9 +16,8 @@
 .flex-column {
   display: flex;
   flex-direction: column;
-  gap: 10px
+  gap: 10px;
 }
 .selected {
   color: var(--color-grey-2);
 }
-
