--- a/src/css/home/episodes.css
+++ b/src/css/home/episodes.css
@@ -1,6 +1,6 @@
 .episodes {
   height: fit-content;
-  background-image: url("../../img/backgroundEpisodes.png");
+  background: linear-gradient(180deg, #000000 20%, #950202dd 50%, #000000 70%);
   background-repeat: no-repeat;
   background-size: cover;
   position: top right;
@@ -54,21 +54,7 @@
   margin-left: 5px;
 }
 @media (max-width: 1050px) {
-  .episodes {
-    background-image: none;
-    background: linear-gradient(180deg, #000000 0, #950202 40%, #000000 90%);
-    height: fit-content;
-  }
 
-  .ep-text::before {
-    content: "EPISODES";
-    display: block;
-    text-align: center;
-    font: 400 5rem/1.03 var(--font-3);
-    color: var(--color-grey-2);
-    top: -100px;
-    position: absolute;
-  }
   .ep-text {
     margin-top: 120px;
     position: relative;
@@ -77,7 +63,6 @@
     display: flex;
     max-height: 600px;
     min-height: 370px;
-    /* width: 95%; */
     justify-content: space-between;
   }
 
@@ -101,8 +86,4 @@
   }
 }
 
-@media (max-width: 410px) {
-  .ep-text::before {
-    font: 400 4.75rem/1.03 var(--font-3);
-  }
-}
+
